--- a/lib/client/app/application/global/dialogs/editor.html
+++ b/lib/client/app/application/global/dialogs/editor.html
@@ -2,14 +2,14 @@
     <md-card class="suite-dialog md-card-base">
 
 
-        <!-- Dialog Editor | Header -->
+    <!-- Dialog Editor | Header -->
         <md-card-title layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center" style="position: relative;">
 
             <md-button ng-show="editor_element.settings.configs.reorder_content == true" ng-class="{'raised-button': items_sortable}" class="md-fab md-mini" aria-label="Enable Draggable" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-click="items_sortable = items_sortable ? false : true">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">drag_handle</md-icon>
             </md-button>
 
-            <!-- Pages -->
+            <!-- Add Contnet Pages -->
             <md-menu ng-if="editor_element.settings.configs.add_content == true && editor_element.data.page.contents">
                 <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">add</md-icon>
@@ -47,9 +47,9 @@
                     </md-menu-item>
                 </md-menu-content>
             </md-menu>
-            <!-- Pages -->
+            <!-- Add Contnet Pages -->
 
-            <!-- Multiple views -->
+            <!-- Add Content Multiple View -->
             <md-menu ng-if="editor_element.settings.configs.add_content == true && editor_element.data.items[view].contents">
                 <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">add</md-icon>
@@ -87,9 +87,9 @@
                     </md-menu-item>
                 </md-menu-content>
             </md-menu>
-            <!-- Multiple views -->
+            <!-- Add Content Multiple View -->
 
-            <!-- Single view -->
+            <!-- Add Content Single View -->
             <md-menu ng-if="editor_element.settings.configs.add_content == true && editor_element.data.length > 0">
                 <md-button md-menu-origin ng-disabled="items_sortable" ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="Add Content" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">add</md-icon>
@@ -127,13 +127,13 @@
                     </md-menu-item>
                 </md-menu-content>
             </md-menu>
-            <!-- Single view -->
+            <!-- Add Content Single View -->
 
 
+            <!-- Conditional Dropdown | Multiviews -->
             <md-card-title-text>
                 <span class="md-headline">Content Editor</span>
             </md-card-title-text>
-
             <md-list-item ng-show="editor_element.settings.configs.multiview == true">
                 <md-input-container class="md-block lightweight-md-dropdown">
                     <label>{{editor_element.settings.configs.multiview_label}}</label>
@@ -147,13 +147,15 @@
                     </md-select>
                 </md-input-container>
             </md-list-item>
+            <!-- Conditional Dropdown | Multiviews -->
 
 
         </md-card-title>
-        <!-- Dialog Editor | Header -->
+    <!-- Dialog Editor | Header -->
 
 
-        <!-- Dialog Editor | Body -->
+    <!-- Dialog Editor | Body -->
+        <!-- If its an element with a title -->
         <md-card-content ng-if="editor_element.settings.configs.title_view == true" ng-show="view == title" layout="column" layout-gt-sm="row" layout-align="space-around center" layout-align-gt-sm="center start" layout-margin>
             <div flex flex-gt-sm="40">
                 <md-card class="md-card-base md-whiteframe-4dp">
@@ -174,7 +176,7 @@
                 </md-card>
             </div>
         </md-card-content>
-
+        <!-- If its an element with a title -->
 
         <md-card-content ng-hide="editor_element.settings.configs.title_view == true && view == title" layout="column" layout-gt-sm="row" layout-align="start center" layout-align-gt-sm="center start" layout-margin>
 
@@ -183,7 +185,9 @@
                 <md-card class="md-card-base md-whiteframe-4dp">
                     <md-card-content>
 
-                        <!-- if it's a page -->
+                        <!-- if it's an element with a title, subtitle, etc. -->
+
+                        <!-- if it's a page - all pages have titles -->
                         <md-card-title ng-show="!items_sortable && editor_element.data.page.contents">
                             <md-card-title-text ng-show="!items_sortable">
                                 <span class="md-headline">Page Title</span>
@@ -195,32 +199,60 @@
                                 <input ng-model="editor_element.data.title">
                             </md-input-container>
                         </md-list-item>
-                        <!-- if it's a page -->
+                        <!-- if it's a page - all pages have titles -->
 
-                        <!-- if it's an element with a title and subtitle -->
+                        <!-- if it's an element or a blog with a title and subtitle -->
                         <md-card-title ng-show="!items_sortable && editor_element.settings.configs.has_title_subtitle">
                             <md-card-title-text ng-show="!items_sortable">
                                 <span class="md-headline">Title</span>
                             </md-card-title-text>
                         </md-card-title>
                         <md-list-item ng-show="!items_sortable && editor_element.settings.configs.has_title_subtitle">
-                            <md-input-container class="md-block lightweight-md-input" flex>
+                            <!-- For Element -->
+                            <md-input-container ng-show="!editor_element.settings.page_type == 'blog'" class="md-block lightweight-md-input" flex>
                                 <label>Title</label>
                                 <input ng-model="editor_element.title">
                             </md-input-container>
+                            <!-- For Element -->
+                            <!-- For Blogs -->
+                            <md-input-container ng-show="editor_element.settings.page_type == 'blog'" class="md-block lightweight-md-input" flex>
+                                <label>Title</label>
+                                <input ng-model="editor_element.data.title">
+                            </md-input-container>
+                            <!-- For Blogs -->
                         </md-list-item>
+
                         <md-card-title ng-show="!items_sortable && editor_element.settings.configs.has_title_subtitle">
                             <md-card-title-text ng-show="!items_sortable">
                                 <span class="md-headline">Subtitle</span>
                             </md-card-title-text>
                         </md-card-title>
                         <md-list-item ng-show="!items_sortable && editor_element.settings.configs.has_title_subtitle">
-                            <md-input-container class="md-block lightweight-md-input" flex>
+                            <!-- For Element -->
+                            <md-input-container class="md-block lightweight-md-input" ng-if="!editor_element.settings.page_type == 'blog'" flex>
                                 <label>Sub Title</label>
                                 <input ng-model="editor_element.subtitle">
                             </md-input-container>
+                            <!-- For Element -->
+                            <!-- For Blogs -->
+                            <md-input-container class="md-block lightweight-md-input" ng-if="editor_element.settings.page_type == 'blog'" flex>
+                                <label>Sub Title</label>
+                                <input ng-model="editor_element.data.subtitle">
+                            </md-input-container>
+                            <!-- For Blogs -->
                         </md-list-item>
-                        <!-- if it's an element with a title and subtitle -->
+
+                        <!-- If it's a page project -->
+                        <md-list-item ng-show="!items_sortable && editor_element.settings.page_type == 'project'">
+                            <md-input-container class="md-block lightweight-md-input" flex>
+                                <label>Description</label>
+                                <input ng-model="editor_element.data.description">
+                                <textarea md-detect-hidden="true" ng-model="editor_element.data.description" rows="3" md-maxlength="250"></textarea>
+                            </md-input-container>
+                        </md-list-item>
+                        <!-- If it's a page project -->
+
+                        <!-- if it's an element with a title, subtitle, etc. -->
 
 
                         <!-- Pages -->
@@ -309,7 +341,7 @@
                         </div>
                         <!-- Pages -->
 
-                        <!-- multiple views -->
+                        <!-- Complex Editor -->
                         <div ng-if="editor_element.data.items" ng-show="view != title" class="lightweight-list-control" ui-sortable="sortableList" ng-model="editor_element.data.items[view].contents">
                             <div ng-repeat="content in editor_element.data.items[view].contents track by $index">
                                 <md-card-title ng-show="!items_sortable">
@@ -393,9 +425,9 @@
                                 </md-list-item>
                             </div>
                         </div>
-                        <!-- multiple views -->
+                        <!-- Complex Editor -->
 
-                        <!-- single view -->
+                        <!-- Simple Editor -->
                         <div ng-if="!editor_element.data.page.contents && !editor_element.data.items" class="lightweight-list-control" ui-sortable="sortableList" ng-model="editor_element.data">
                             <div ng-repeat="content in editor_element.data track by $index">
                                 <md-card-title ng-show="!items_sortable">
@@ -479,7 +511,7 @@
                                 </md-list-item>
                             </div>
                         </div>
-                        <!-- single view -->
+                        <!-- Simple Editor -->
 
 
                     </md-card-content>
@@ -551,7 +583,7 @@
 
 
         </md-card-content>
-        <!-- Dialog Editor | Body -->
+    <!-- Dialog Editor | Body -->
 
 
         <!-- Dialog Editor | Cancel or Update Action -->
