--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -144,7 +144,7 @@
 	.projects-listing.one-third {max-width: {{scroll_bar_aware_window_width/3}}px!important;}
 	.projects-listing.one-half {max-width: {{scroll_bar_aware_window_width/2}}px!important;}
 	.projects-listing.full-width {max-width: {{scroll_bar_aware_window_width}}px!important;}
-	.projects.panel {overflow: hidden; position: absolute; transition: all .5s ease-in-out;}
+	.projects.panel {overflow: hidden; transition: all .5s ease-in-out;}
 	/* projects-carousel */
 
 </style>
