--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -105,11 +105,24 @@
 
 	/* md-cards */
 	.suite-dialog > md-card-title {background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12); z-index: 2;}
+	
 	.suite-dialog > md-card-title md-input-container md-select:not([disabled]):focus .md-select-value,
-	md-select.md-default-theme .md-select-icon, .suite-dialog md-card-title md-input-container.md-default-theme:not(.md-input-invalid).md-input-has-value label, .suite-dialog md-card-title md-input-container:not(.md-input-invalid).md-input-has-value label {color: {{base_hue_lightest.value}};}
+	md-select.md-default-theme .md-select-icon, 
+	.suite-dialog md-card-title md-input-container.md-default-theme:not(.md-input-invalid).md-input-has-value label, 
+	.suite-dialog md-card-title md-input-container:not(.md-input-invalid).md-input-has-value label,
+	.projects-dropdown md-input-container md-select:not([disabled]):focus .md-select-value,
+	.projects-dropdown md-select.md-default-theme .md-select-icon,
+	.projects-dropdown md-input-container.md-default-theme:not(.md-input-invalid).md-input-has-value label,
+	.projects-dropdown md-input-container:not(.md-input-invalid).md-input-has-value label {color: {{base_hue_lightest.value}};}
+
 	.md-card-base {background-color: {{base_hue_lightest.value}};}
 	.mediaVault md-tabs#views {min-height: {{window_height + 100}}px!important;}
-	.suite-dialog > md-card-title md-select.md-default-theme .md-select-value, .suite-dialog > md-card-title md-select .md-select-value, .suite-dialog .lightweight-md-dropdown md-select:not([disabled]):focus .md-select-value {border-bottom-color: {{base_hue_lightest.value}}; min-width: 150px;}
+	.suite-dialog > md-card-title md-select.md-default-theme .md-select-value, 
+	.suite-dialog > md-card-title md-select .md-select-value, 
+	.suite-dialog .lightweight-md-dropdown md-select:not([disabled]):focus .md-select-value,
+	.projects-dropdown .lightweight-md-dropdown md-select:not([disabled]):focus .md-select-value, 
+	.projects-dropdown .md-select-value, 
+	.projects-dropdown md-select.md-default-theme .md-select-value {border-bottom-color: {{base_hue_lightest.value}}; min-width: 150px;}
 	.suite-dialog .lightweight-md-dropdown.normal md-select:not([disabled]):focus .md-select-value {border-bottom-color: rgba(0,0,0,0.12);}
 	@media screen and (min-width: 840px) {
 	    .suite-dialog > md-card-content {
