--- a/lib/client/app/application/global/dialogs/mediaVault.html
+++ b/lib/client/app/application/global/dialogs/mediaVault.html
@@ -138,7 +138,7 @@
                                 </div>
                             </md-tab-body>
                         </md-tab>
-                        <md-tab id="Projects">
+                        <!-- <md-tab id="Projects">
                             <md-tab-label>Manage Projects</md-tab-label>
                             <md-tab-body>
                                 <div layout-margin flex>
@@ -152,7 +152,6 @@
                                     </form>
                                 </div>
 
-                                <!-- Add A Gallery -->
                                 <div flex>
                                     <div ng-show="galleriesgridview == false" layout="column" layout-align="center center" flex="100" layout-wrap layout-margin>
                                         <md-card class="md-card-base md-whiteframe-4dp" style="width: 90%">
@@ -228,14 +227,14 @@
                                         </md-card>
                                     </div>
                                 </div>
-                                <!-- Add A Gallery -->
+                                
                                 <div ng-show="galleries.length > 20 && galleriesgridview == true" layout="row" layout-align="start center" layout-margin flex>
                                     <md-button ng-disabled="currentGalleryPage == 0" ng-click="currentGalleryPage=currentGalleryPage-1" class="button-color-border">Previous</md-button>
                                     <span>{{currentGalleryPage+1}}/{{numberOfGalleryPages}}</span>
                                     <md-button ng-disabled="currentGalleryPage == numberOfGalleryPages - 1" ng-click="currentGalleryPage=currentGalleryPage+1" class="button-color-border">Next</md-button>
                                 </div>
                             </md-tab-body>
-                        </md-tab>
+                        </md-tab> -->
                         <md-tab id="Tags">
                             <md-tab-label>Manage Tags</md-tab-label>
                             <md-tab-body layout-align="column">
