--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -168,7 +168,7 @@
     <script src="../application/pages/projects/controllers/projectsController.js" type="text/javascript"></script>
     <script src="../application/pages/projects/controllers/projectController.js" type="text/javascript"></script>
     <script src="../application/pages/spotlight/controllers/spotlightController.js" type="text/javascript"></script>
-    <!-- <script src="../application/pages/team/controllers/teamController.js" type="text/javascript"></script> -->
+    <script src="../application/pages/team/controllers/teamController.js" type="text/javascript"></script>
     <script src="../application/pages/authentication/controllers/loginController.js" type="text/javascript"></script>
     <!-- Client Scripts -->
 
