--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -13,37 +13,37 @@
                 </md-button>
                 <md-menu-content width="4">
                     <md-menu-item>
-                        <md-button ngf-select ng-model="files" ngf-pattern="'.doc,.docx'" ngf-accept="'.doc,.docx'" ngf-max-size="20MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.doc,.docx'" ngf-accept="'.doc,.docx'" ngf-max-size="20MB">
                             Word Document
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ngf-select ng-model="files" ngf-pattern="'.xls'" ngf-accept="'.xls,.xlsx'" ngf-max-size="20MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.xls'" ngf-accept="'.xls,.xlsx'" ngf-max-size="20MB">
                             Excel Document
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ngf-select ng-model="files" ngf-pattern="'.ppt'" ngf-accept="'.ppt,.pptx'" ngf-max-size="20MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.ppt'" ngf-accept="'.ppt,.pptx'" ngf-max-size="20MB">
                             Powerpoint Document
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ngf-select ng-model="files" ngf-pattern="'.pdf'" ngf-accept="'.pdf'" ngf-max-size="20MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.pdf'" ngf-accept="'.pdf'" ngf-max-size="20MB">
                             PDF Document
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ngf-select ng-model="files" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB">
                             Image
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ngf-select ng-model="files" ngf-pattern="'.mp4'" ngf-accept="'video/mp4'" ngf-max-size="20MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.mp4'" ngf-accept="'video/mp4'" ngf-max-size="20MB">
                             MP4 Video
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ngf-select ng-model="files" ngf-pattern="'.zip'" ngf-accept="'application/zip,application/x-zip-compressed'" ngf-max-size="50MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.zip'" ngf-accept="'application/zip,application/x-zip-compressed'" ngf-max-size="50MB">
                             Zipped File
                         </md-button>
                     </md-menu-item>
@@ -188,7 +188,13 @@
                                                     <md-content style="padding: 0;">
                                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                                             <md-list class="md-dense" flex>
-                                                                <md-list-item class="md-2-line" flex>
+                                                                <md-list-item ng-if="me.files < 1" class="md-2-line" flex>
+                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
+                                                                    <div class="md-list-item-text">
+                                                                        <h3 style="font-size: 16px;">No Files</h3>
+                                                                    </div>
+                                                                </md-list-item>
+                                                                <md-list-item class="md-2-line" ng-repeat="file in me.files" flex>
                                                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">No Files</h3>
